Fix SonarCloud gate: cover new backend services; resolve code smells
- Add service-level unit tests for the new logic so new-code coverage clears
  the 80% gate: AuthServiceImpl updateProfile/changePassword,
  UserServiceImpl resetPassword, HarvestServiceImpl updateHarvest,
  AnalyticsServiceImpl getSiteFeedDaily, SearchServiceImpl user search
  (admin + gated), SiteDeliveryReceiptServiceImpl 6-hour window.
- Smell fixes: extract the duplicated "User not found" literal to a constant;
  use Math.clamp in getSiteFeedDaily; de-duplicate the driver slice tests.

Backend 419 tests pass.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>